Chg: build-listing.yml repository_dispatch

--- a/.github/workflows/build-listing.yml
+++ b/.github/workflows/build-listing.yml
@@ -2,6 +2,8 @@ name: Build Repo Listing
 
 on: 
   workflow_dispatch:
+  repository_dispatch:
+    types: [Release]
   push:
     branches: main
     paths: source.json
